2017-04-02  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: postponed the LocalTest shutdown bug.

2017-03-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/MainMenu.cpp (exit): now call destroyRootWindow to
	avoid event error on reload.

	* src/client/MainMenu.cpp (logoCreated): avoid creating the logo
	geometry buffer twice.

	* src/client/LocalTest.cpp (onBack): go back to MainMenu.
	* src/client/GameEngine.cpp (toMainMenu): go back from Localest.

2017-03-30  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (keyReleased): send event to cuurent
	gamestate.
	* src/client/GameEngine.cpp (keyPressed): send event to cuurent
	gamestate.
	* src/client/GameState.cpp: implement empty key related functions.

	* src/client/GameEngine.cpp (keyPressed): fix the textbox handling bug.

2017-03-29  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (frameStarted): inject time to CEGUI.

	* src/client/LocalTest.cpp (enter): add randomSeed handler to layout's
	random button.
	* src/client/LocalTest.cpp (randomSeed): randomly update textbox.

2017-03-27  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (serverlib): add the rule and link it for client.
	* src/server/lib/Server.cpp (Server): add empty class.
	* media/layouts/local_test.layout: add a random seed button.
	* media/layouts/local_test.layout: Play button is disabled by default.
	* media/layouts/local_test.layout: add existing world list..
	* media/layouts/local_test.layout: add name text edit.

2017-03-20  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: add the new world/server relation question.

2017-03-17  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/local_test.layout: add and load the XML layout.
	* src/client/GameEngine.cpp (toLocalTest): correctly switch from
	current state to LocalTest.

2017-03-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp: add empty overriden functions.
	* src/client/LocalTest.cpp: add empty class.
